gl31-master/src/test/deca/syntax/invalid/complet/bad_asm.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, 'as' n'existe pas
//
// Historique:
//    cree le 19/01/2021
class Test{
    void methodeTest(int param1, float param2) as ("multi line string");
}
